* Instant Search for User, Blog and Recipes * Added Name to User (Unnamed by default)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,12 @@ en:
   application:
     ago: ago
     step: Step
+    sign_in: Sign In
+    sign_out: Sign Out
+  search:
+    blogs: Blogs
+    users: Users
+    recipes: Recipes
 
   # View Translations
   activities:
