--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,23 +3,39 @@
 en:
   # Non-specific Translations
   application:
+    hello: Hello
     ago: ago
     step: Step
     sign_in: Sign In
     sign_out: Sign Out
+    more: More
+    administration: Administration
+    yes: Yes
+    no: No
   search:
     blogs: Blogs
     users: Users
     recipes: Recipes
+  public_activity:
+    blog:
+      create:
+       new_blog_article: "New Article %{article} written by %{owner}"
+
 
   # View Translations
   activities:
+    index:
+      activities: Activities
   blogs:
+    index:
+      blogs: Blogs
   comments:
   images:
   ingredients:
     edit:
       edit_ingredient: Edit Ingredient
+    index:
+      ingredients: Ingredients
     new:
       new_ingredient: New Ingredient
     form:
@@ -33,6 +49,9 @@ en:
     form:
       add_ingredient: Add Ingredient
       add_preparation_step: Add Prepartion Step
+      add_image: Add Image
+    index:
+      recipes: Recipes
     new:
       edit_recipe: New Recipe
     preparation_step:
@@ -40,6 +59,9 @@ en:
     recipe_ingredient:
       action: Action
       remove: Remove
+    image:
+      select_image: Select Image
+      action: Action
     show:
       recipe_instructions: Instructions
       preparation: Preparation
@@ -51,6 +73,10 @@ en:
   settings:
   units:
   users:
+    edit:
+     edit_user: Edit User
+    joined_in: "Joined in %{year}"
+    recipes_count: "%{count} Recipes"
 
   # Model Translations
   activerecord: # Model name and attribute overrides
