* Added Image to Blog * Extracted Sidebar * Fixed Comments (friendly find) * Removed post_img1.jpg (example)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,8 @@ en:
     index:
       blogs: Blogs
   comments:
+    comments:
+      text_description: Thanks for writing a comment here!
   images:
   ingredients:
     edit:
