Search includes Ingredients

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -63,6 +63,7 @@ de:
     users: Benutzer
     recipes: Rezepte
     tags: Tags
+    ingredients: Zutaten
   public_activity:
     blog:
       create:
