--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -140,6 +140,8 @@ de:
   recipes:
     select_tags: Tags auswählen
     select_difficulty: Schwierigkeit auswählen
+    remove_preparation_step: Schritt entfernen
+    remove_hint: Hinweis entfernen
     remove_image: Entfernen
     controller:
       pdf_page: "Seite [page]"
@@ -153,6 +155,8 @@ de:
       ingredients: Zutaten
       preparation_steps: Zubereitungsschritte
       add_preparation_step: Zubereitungsschritt hinzufügen
+      hints: Hinweise
+      add_hint: Hinweis hinzufügen
       images: Bilder
       add_image: Bild hinzufügen
     index:
@@ -162,8 +166,6 @@ de:
       new_recipe: Neues Rezept
     newest:
       newest_recipes: Neuste Rezepte
-    preparation_step:
-      remove_step: Schritt entfernen
     recipe_ingredient:
       action: Aktionen
       remove: Entfernen
@@ -180,6 +182,7 @@ de:
       portions: Portionen
       minutes_unit: min
       calories_unit: kcal
+      tip: Tipp
     portions:
       one: 'Eine Portion'
       other: '%{count} Portionen'
