--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -225,7 +225,7 @@ en:
       name_description: The name of the user
       description_description: The description of the user
       select_role: Select Role
-      select_color: Select Color
+      select_language: Select Language
       select_image: Select Image
     joined_in: "Joined in %{year}"
     recipes_count: "%{count} Recipes"
