--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -31,12 +31,15 @@ de:
       unrated: nicht bewertet
     menu:
       sign_in: Einloggen
+      sign_out: Ausloggen
       blog: Blog
       recipes: Rezepte
       ingredients: Zutaten
     sign_out_modal:
       sign_out: Ausloggen
       are_you_sure_to_sign_out: Bist du sicher, dass du dich Ausloggen möchtest?
+    sign_in_modal:
+      sign_in: Einloggen
     delete_modal:
       delete: Löschen
       are_you_sure_to_delete: Bist du sicher, dass du das Löschen möchtest?
