--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,12 +31,15 @@ en:
       unrated: Not Rated
     menu:
       sign_in: Sign In
+      sign_out: Sign Out
       blog: Blog
       recipes: Recipes
       ingredients: Ingredients
     sign_out_modal:
       sign_out: Sign Out
       are_you_sure_to_sign_out: Are you sure you want to sign out?
+    sign_in_modal:
+      sign_in: Sign In
     delete_modal:
       delete: Delete
       are_you_sure_to_delete: Are you sure you want to delete this?
