--- a/config/locales/devise.de.yml
+++ b/config/locales/devise.de.yml
@@ -56,5 +56,5 @@ de:
       not_found: "nicht gefunden"
       not_locked: "ist nicht gesperrt"
       not_saved:
-        one: "Konnte %{resource} nicht speichern: ein Fehler."
-        other: "Konnte %{resource} nicht speichern: %{count} Fehler."
+        one: "Ein Fehler verhindert das speichern des %{resource}s."
+        other: "%{count} Fehler verhindern das speichern des %{resource}s."
