Implemented Search with Sunspot (Fulltext Search, Facets)

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -68,6 +68,8 @@ de:
     recipes: Rezepte
     tags: Tags
     ingredients: Zutaten
+    search:
+      search: Suche
   public_activity:
     blog:
       create:
